tests/rwt/bads.check.out
Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 166, in jmc_script
    process_model(model, args.check, args.op != "N", args.optimize, args.debug)
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 44, in process_model
    raise ModelError(f"invalid initial model {model._url}[{model._id}]")
json_model.types.ModelError: invalid initial model bads/bool_0.model.json[0]

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/venv/bin/jmc", line 8, in <module>
    sys.exit(jmc_script())
             ^^^^^^^^^^^^
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 168, in jmc_script
    log.error(e, excp_info=args.debug)
  File "/usr/lib/python3.12/logging/__init__.py", line 1568, in error
    self._log(ERROR, msg, args, **kwargs)
TypeError: Logger._log() got an unexpected keyword argument 'excp_info'
Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 166, in jmc_script
    process_model(model, args.check, args.op != "N", args.optimize, args.debug)
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 44, in process_model
    raise ModelError(f"invalid initial model {model._url}[{model._id}]")
json_model.types.ModelError: invalid initial model bads/bool_1.model.json[0]

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/venv/bin/jmc", line 8, in <module>
    sys.exit(jmc_script())
             ^^^^^^^^^^^^
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 168, in jmc_script
    log.error(e, excp_info=args.debug)
  File "/usr/lib/python3.12/logging/__init__.py", line 1568, in error
    self._log(ERROR, msg, args, **kwargs)
TypeError: Logger._log() got an unexpected keyword argument 'excp_info'
Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 166, in jmc_script
    process_model(model, args.check, args.op != "N", args.optimize, args.debug)
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 44, in process_model
    raise ModelError(f"invalid initial model {model._url}[{model._id}]")
json_model.types.ModelError: invalid initial model bads/_dup_prop_1.model.json[0]

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/venv/bin/jmc", line 8, in <module>
    sys.exit(jmc_script())
             ^^^^^^^^^^^^
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 168, in jmc_script
    log.error(e, excp_info=args.debug)
  File "/usr/lib/python3.12/logging/__init__.py", line 1568, in error
    self._log(ERROR, msg, args, **kwargs)
TypeError: Logger._log() got an unexpected keyword argument 'excp_info'
Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 166, in jmc_script
    process_model(model, args.check, args.op != "N", args.optimize, args.debug)
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 44, in process_model
    raise ModelError(f"invalid initial model {model._url}[{model._id}]")
json_model.types.ModelError: invalid initial model bads/_dup_prop_2.model.json[0]

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/venv/bin/jmc", line 8, in <module>
    sys.exit(jmc_script())
             ^^^^^^^^^^^^
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 168, in jmc_script
    log.error(e, excp_info=args.debug)
  File "/usr/lib/python3.12/logging/__init__.py", line 1568, in error
    self._log(ERROR, msg, args, **kwargs)
TypeError: Logger._log() got an unexpected keyword argument 'excp_info'
ERROR:json-model:@ restricts other keywords ['@']
ERROR:json-model:invalid model bads/exclusive_0.model.json
ERROR:json-model:@ restricts other keywords ['@']
ERROR:json-model:invalid model bads/exclusive_1.model.json
ERROR:json-model:@ restricts other keywords ['@']
ERROR:json-model:invalid model bads/exclusive_2.model.json
ERROR:json-model:| restricts other keywords ['|']
ERROR:json-model:invalid model bads/exclusive_3.model.json
ERROR:json-model:& restricts other keywords ['&']
ERROR:json-model:invalid model bads/exclusive_4.model.json
ERROR:json-model:| restricts other keywords ['|']
ERROR:json-model:invalid model bads/exclusive_5.model.json
Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 166, in jmc_script
    process_model(model, args.check, args.op != "N", args.optimize, args.debug)
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 44, in process_model
    raise ModelError(f"invalid initial model {model._url}[{model._id}]")
json_model.types.ModelError: invalid initial model bads/_infinite_recursion.model.json[0]

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/venv/bin/jmc", line 8, in <module>
    sys.exit(jmc_script())
             ^^^^^^^^^^^^
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 168, in jmc_script
    log.error(e, excp_info=args.debug)
  File "/usr/lib/python3.12/logging/__init__.py", line 1568, in error
    self._log(ERROR, msg, args, **kwargs)
TypeError: Logger._log() got an unexpected keyword argument 'excp_info'
Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 166, in jmc_script
    process_model(model, args.check, args.op != "N", args.optimize, args.debug)
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 44, in process_model
    raise ModelError(f"invalid initial model {model._url}[{model._id}]")
json_model.types.ModelError: invalid initial model bads/int_0.model.json[0]

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/venv/bin/jmc", line 8, in <module>
    sys.exit(jmc_script())
             ^^^^^^^^^^^^
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 168, in jmc_script
    log.error(e, excp_info=args.debug)
  File "/usr/lib/python3.12/logging/__init__.py", line 1568, in error
    self._log(ERROR, msg, args, **kwargs)
TypeError: Logger._log() got an unexpected keyword argument 'excp_info'
Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 166, in jmc_script
    process_model(model, args.check, args.op != "N", args.optimize, args.debug)
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 44, in process_model
    raise ModelError(f"invalid initial model {model._url}[{model._id}]")
json_model.types.ModelError: invalid initial model bads/int_1.model.json[0]

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/fabien/DEV/GIT/dsv/json-model/venv/bin/jmc", line 8, in <module>
    sys.exit(jmc_script())
             ^^^^^^^^^^^^
  File "/home/fabien/DEV/GIT/dsv/json-model/json_model/script.py", line 168, in jmc_script
    log.error(e, excp_info=args.debug)
  File "/usr/lib/python3.12/logging/__init__.py", line 1568, in error
    self._log(ERROR, msg, args, **kwargs)
TypeError: Logger._log() got an unexpected keyword argument 'excp_info'
ERROR:json-model:| is a list ['|']
ERROR:json-model:invalid model bads/pipe_list.model.json
ERROR:json-model:# is a string ['#']
ERROR:json-model:invalid model bads/sharp_type.model.json
ERROR:json-model:invalid model version type: bool
ERROR:json-model:invalid model bads/tilde_str.model.json
